@@ -19,6 +19,9 @@ Revision history for SPVM
         
         [SPECIFICATION FIX]
         * Add string literal escape character \$
+
+        [NON BACKWORD COMPATIBLE CHANGES]
+        * The unicode copde point of Unicode escape character must be a Unicode scalar value.
         
 0.9517  2022-05-19
         [CHANGE]
